@@ -62,6 +62,29 @@
             </archive>
           </configuration>
         </plugin>
+    <plugin>
+
+    <groupId>org.apache.maven.plugins</groupId>
+
+    <artifactId>maven-surefire-plugin</artifactId>
+
+    <version>2.7.2</version>
+
+    <configuration>
+
+        <!--forkMode>never</forkMode-->
+        <argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=2048m</argLine>
+
+        <systemPropertyVariables>
+
+            <user.name>${user.name}</user.name>
+
+        </systemPropertyVariables>
+
+    </configuration>
+
+</plugin>
+
       </plugins>
     </build>
     <dependencies>
